fix whitespace at bottom of page

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 	height: 100vh;
 	display: grid;
 	grid-template-columns: 15% 85%;
-	grid-template-rows: 12% 87%;
+	grid-template-rows: 12% 88%;
 }
 
 .main-content {
